<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:layout_height="wrap_content"
    android:paddingRight="20sp"
    android:paddingTop="10sp"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_contact_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:text="@string/unknown"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="2dp"
            android:text="@string/nmbr"
            android:id="@+id/tv_contact_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout

            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton

            android:id="@+id/btn_contacthistory_call"
                android:text="@string/dial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_phone_24dp"/>

        </LinearLayout>



    </LinearLayout>


</LinearLayout>
