<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        tools:context=".activity.IntepretorActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_intepretpr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_intepretaor_haveCall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/have_a_call"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/to_start_recieving_calls_please_press_start_listening" />

            </LinearLayout>


            <TextView
                android:id="@+id/tv_intepretaor_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_weight="3"
            android:orientation="vertical">


            <Button
                android:id="@+id/btn_intereprator_userDetails"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/roundbutton"
                android:text="@string/user_details"
                android:visibility="invisible" />

            <Button

                android:id="@+id/btn_intereprator_startListening"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbutton"
                android:text="@string/start_listening" />


            <Button
                android:id="@+id/btn_intereprator_startcall"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbutton"
                android:text="@string/accept_call"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_intereprator_startvideocall"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbutton"
                android:text="@string/start_videocall"
                android:visibility="invisible" />

            <Button
                android:id="@+id/userunavailable"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbutton"
                android:text="Contact Unavailable"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btn_intereprator_stopListening"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbutton"
                android:text="@string/stop_listening"
                android:visibility="visible" />


            <Button
                android:id="@+id/btn_intereprator_endcall"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundbutton"
                android:text="@string/end_call"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/tvOpenDialer"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="Call"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="@color/red"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>