<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AppRTCIndicatorFragment1"
    android:background="#ffffff">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="#060606"
        android:lineSpacingExtra="2sp"
        android:text="@string/turn_on_noti"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153"
        android:fontFamily="@font/circularstd_medium"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321"
        android:text="@string/the_app_needs"
        android:fontFamily="@font/circularstd_medium"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.097"
       >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="48dp"
        android:gravity="center"
    android:orientation="horizontal">
        <ImageView

            android:layout_width="24.3dp"
            android:layout_height="20dp"
            android:src="@drawable/msg"
            android:gravity="center"
            />
        <TextView

            android:layout_width="100dp"
            android:layout_height="22dp"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:text="@string/chat" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24.3dp"
                android:layout_height="20dp"
                android:src="@drawable/camera"
                android:gravity="center"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="24.3dp"
                android:layout_height="20dp"
                android:src="@drawable/mic"
                android:gravity="center"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/micro_phone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/textView81"
                android:layout_width="24.3dp"
                android:layout_height="20dp"
                android:src="@drawable/videocam"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="100dp"
                android:layout_height="22dp"
                android:layout_marginLeft="20dp"
                android:gravity="left"
                android:text="@string/video_camera" />
        </LinearLayout>

<!--        <TextView-->
<!--            android:id="@+id/textView9"-->
<!--            android:layout_width="197dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:drawableStart="@drawable/camera"-->
<!--            android:gravity="center"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/camera" />-->

<!--        <TextView-->
<!--        android:id="@+id/textView10"-->
<!--        android:layout_width="197dp"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:drawableStart="@drawable/mic"-->
<!--        android:gravity="center"-->
<!--        android:padding="10dp"-->
<!--        android:text="@string/micro_phone" />-->

<!--        <TextView-->
<!--            android:id="@+id/vidocamera"-->
<!--            android:layout_width="197dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_marginTop="5dp"-->
<!--            android:drawableStart="@drawable/videocam"-->
<!--            android:gravity="center"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/video_camera" />-->


    </LinearLayout>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="122dp"
        android:layout_marginTop="613dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="30dp">
        <Button
            android:id="@+id/btn_permission"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:gravity="center|bottom"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:background="#00FFFFFF"
            android:text="@string/grant_permission"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />


<!--        <ImageView-->
<!--            android:id="@+id/oval211"-->
<!--            android:layout_width="66dp"-->
<!--            android:layout_height="7.7dp"-->
<!--            android:src="@drawable/rectangle_476"-->
<!--            android:layout_marginStart="10.2dp" />-->


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>